tests/ui/traits/next-solver/assembly/ambiguity-due-to-uniquification-3.next.stderr
error[E0283]: type annotations needed: cannot satisfy `dyn Object<&(), &()>: Trait<&()>`
  --> $DIR/ambiguity-due-to-uniquification-3.rs:28:5
   |
LL |     impls_trait(obj, t);
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: cannot satisfy `dyn Object<&(), &()>: Trait<&()>`
   = help: the trait `Trait<T>` is implemented for `()`
note: required by a bound in `impls_trait`
  --> $DIR/ambiguity-due-to-uniquification-3.rs:24:19
   |
LL | fn impls_trait<T: Trait<U>, U>(_: Inv<T>, _: Inv<U>) {}
   |                   ^^^^^^^^ required by this bound in `impls_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
